# desktop-ur5e

./: .envrc  .gitignore  .gitmodules  README.md  pixi.toml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml  entrypoint.sh  init-env.sh
configs/: identification_default.yaml  push_default.yaml
docker/: Dockerfile  docker-compose.yaml  init-env.sh
literature/papers/Hogan-WAFR2016-Feedback_Control_Pusher-Slider/: feedback-control-of-the-pusher-slider-system-a-story-of-hybrid-and-underactuated-contact-dynamics.md
notes/: ISSUES.md  PLAN.md  PLAN_push_model_builder_migration.md  TODO.md
notes/LOGS/: log_code_review.md  log_gpu_rl.md  log_integration.md  log_model_builder.md  log_pushing.md  log_trajectory_design.md
scenes/common/: environment.xml
scenes/objects/: payload_box.xml  payload_flat.xml  slider.xml
scenes/tasks/: identification.xml  push.xml  trajectory_design.xml
scripts/: analytical_push.py  grid_search.py  make_keyframe.py  optimize_trajectory.py  render_excitation.py  render_video.py  run_identification.py  run_push.py  setup_assets.sh  view_pose.py
tests/core/: test_env.py  test_layout.py
tests/identification/: conftest.py  test_identification_constraints.py  test_identification_estimators.py  test_identification_execution.py  test_identification_optimizer.py  test_identification_regressor.py  test_integration.py  test_mpc_loop.py  test_mpc_metrics.py  test_mpc_planner.py  test_quintic_spline.py  test_trajectories.py  test_warp_acceleration.py
tests/pushing/: test_mpc.py  test_scene.py
(+68 files in other folders)
