[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ur5e-sim"
version = "0.1.0"
description = "Modular UR5e MuJoCo simulation: pushing, inertial identification, and beyond"
requires-python = ">=3.10"
dependencies = [
    "mujoco>=3.8",
    "numpy",
    "scipy",
    "matplotlib",
    "pillow",
    "tyro",
    "pyyaml",
    "imageio",
]

[project.optional-dependencies]
gpu = ["warp-lang"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
